# lola

./: README.md  activate_lola.sh  latent_channel_stats.pt  pyproject.toml  slurm_train_dm.sbatch  submit_chain.sh
.github/workflows/: ci.yaml
experiments/: cache_latents.py  eval.py  eval_all.sh  eval_ldm.py  get_stats.py  train_ae.py  train_autoencoder.py  train_denoiser.py  train_diffusion.py  train_diffusion_orig.py  train_dm.py  train_ldm.py  train_lsm.py  train_sm.py  train_surrogate.py
experiments/configs/: cache_latents.yaml  default_autoencoder.yaml  default_cache.yaml  default_denoiser.yaml  default_dm.yaml  default_eval.yaml  default_ldm.yaml  eval.yaml  get_stats.yaml  train_ae.yaml  train_autoencoder.yaml  train_diffusion.yaml  train_dm.yaml  train_ldm.yaml  train_ldm512.yaml  train_lsm.yaml  train_sm.yaml  train_surrogate.yaml
experiments/configs/ae/: 16x16_large.yaml  16x16_medium.yaml  16x16_small.yaml  64x64_large.yaml  64x64_medium.yaml  64x64_small.yaml  dcae_3d_f8c64_large.yaml  dcae_f32c64_large.yaml  dcae_f32c64_medium.yaml  dcae_f32c64_small.yaml  f32c64_large.yaml  f32c64_medium.yaml  f32c64_small.yaml  f8c4_large.yaml  f8c4_medium.yaml  f8c4_small.yaml  vit_f16c16_large.yaml  vit_f32c64_large.yaml
experiments/configs/dataset/: dryair.yaml  euler_all.yaml  euler_open.yaml  euler_periodic.yaml  gravity_cooling.yaml  rayleigh_benard.yaml
experiments/configs/denoiser/: dinat_medium.yaml  dit_large.yaml  dit_medium.yaml  swin_large.yaml  swin_medium.yaml  unet_deep.yaml  unet_deep_medium.yaml  unet_deep_small.yaml  unet_large.yaml  unet_medium.yaml  vit_large.yaml  vit_medium.yaml  vit_small.yaml
experiments/configs/optim/: adamw.yaml  psgd.yaml  shampoo.yaml  soap.yaml
experiments/configs/server/: empire.yaml  gpuxl.yaml  rusty.yaml
experiments/configs/surrogate/: unet_deep.yaml  unet_deep_medium.yaml  unet_deep_small.yaml  unet_large.yaml  unet_medium.yaml  vit_large.yaml  vit_medium.yaml  vit_pixel.yaml  vit_small.yaml
experiments/euler/: ae.ipynb  cache_latent.py  eval.ipynb  eval_autoencoder.ipynb  eval_denoiser.ipynb  eval_denoiser_masked.ipynb  eval_ldm.ipynb  figures.ipynb  train.py  train_ae_gpuxl.sh  train_autoencoder.py  train_denoiser.py  viz.ipynb
experiments/gravity_cooling/: eval_autoencoder.ipynb  eval_ldm.ipynb  eval_lsm.ipynb  figures.ipynb
experiments/rayleigh_benard/: eval_autoencoder.ipynb  eval_lsm.ipynb  figures.ipynb  latent_analysis.ipynb
lola/: autoencoder.py  data.py  diffusion.py  emulation.py  fourier.py  hydra.py  latent3d.py  optim.py  plot.py  soap.py  surrogate.py  utils.py
lola/nn/: attention.py  dcae.py  embedding.py  layers.py  unet.py  utils.py  vit.py
lpdm/: autoencoder.py  data.py  diffusion.py  emulation.py  fourier.py  hydra.py  loss.py  optim.py  plot.py  soap.py  surrogate.py  utils.py
lpdm/nn/: __init__.py  attention.py  autoencoder.py  common.py  dcae.py  dit.py  layers.py  swin.py  unet.py  vit.py
lpdm/soap/: __init__.py
tests/: test_nn_dit.py  test_nn_swin.py  test_nn_unet.py  test_nn_vit.py
(+53 files in other folders)
