[project]
name = "lpdm"
description = "Latent Physics Diffusion Model"
version = "0.0.0"
dependencies = [
  "azula==0.2.3",
  "einops==0.8.0",
  "h5py==3.11.0",
  "numpy==1.26.4",
  "torch==2.3.1",
  "torchvision==0.18.1",
  "tqdm==4.66.5",
]
requires-python = ">=3.11"

[project.optional-dependencies]
all = [
  "dawgz==1.0.0",
  "hydra-core==1.3.2",
  "ipykernel==6.29.5",
  "matplotlib==3.9.0",
  "pre-commit==3.8.0",
  "pytest==8.3.2",
  "ruff==0.6.4",
  "the_well @ git+https://github.com/PolymathicAI/the_well",
  "wandb==0.17.9",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
extend-select = ["B", "I", "W"]
ignore = ["E731", "E741"]

[tool.ruff.lint.isort]
lines-between-types = 1
no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
preview = true

[tool.setuptools.packages.find]
include = ["lpdm*"]
