[project]
name = "lola"
description = "Lost in Latent Space"
version = "1.0.0"
dependencies = [
  "azula==0.3.1",
  "einops==0.8.0",
  "h5py==3.11.0",
  "numpy==1.26.3",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "tqdm==4.66.5",
  "xformers==0.0.28.post3",
]
requires-python = ">=3.11"

[project.optional-dependencies]
all = [
  "dawgz==1.0.3",
  "heavyball==1.4.3",
  "hydra-core==1.3.2",
  "ipykernel==6.29.5",
  "ipywidgets==8.1.5",
  "matplotlib==3.9.0",
  "moviepy==2.1.2",
  "pre-commit==3.8.0",
  "ruff==0.6.4",
  "seaborn==0.13.2",
  "the_well==1.0.0",
  "wandb==0.17.9",
]

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120

[tool.ruff.lint]
extend-select = ["B", "I", "W"]
ignore = ["E731", "E741"]

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
preview = true

[tool.setuptools.packages.find]
include = ["lola*"]
